# awk-interpreter

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  awk.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_arith.awk  bench_array.awk  bench_array_simple.awk  bench_combined.awk  bench_concat.awk  bench_csv.awk  bench_field_split.awk  bench_rebuild_record.awk  bench_regex.awk  bench_string.awk  generate_data.awk
cmake/: awk.pc.in  awkConfig.cmake.in
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  FEATURES.md  MANUAL.md  MANUAL_DE.md  USAGE.md
include/: awk.hpp
include/awk/: ast.hpp  environment.hpp  i18n.hpp  interpreter.hpp  lexer.hpp  parser.hpp  platform.hpp  token.hpp  value.hpp
integration_tests/: README.md  compare_with_gawk.sh  run_tests.bat  run_tests.sh
integration_tests/comparison_results/: 01_print_all_gawk.txt  02_field_access_gawk.txt  03_printf_formats_gawk.txt  05_row_sum_awk.txt  10_regex_match_awk.txt  11_negated_regex_gawk.txt  12_range_pattern_gawk.txt  13_field_regex_gawk.txt  14_expression_pattern_awk.txt  20_if_else_gawk.txt  22_for_loop_gawk.txt  24_switch_gawk.txt  30_string_functions_awk.txt  31_math_functions_gawk.txt  31b_math_functions_compat_gawk.txt  34_sprintf_awk.txt  40_associative_array_gawk.txt  41_delete_array_awk.txt  42_multidim_array_gawk.txt  43_asort_gawk.txt  50_csv_processing_gawk.txt  51_log_analysis_gawk.txt  52_word_count_gawk.txt  53_namespace_awk.txt  54_gensub_gawk.txt  55_coprocess_gawk.txt  56_i18n_awk.txt
integration_tests/expected/: 04_begin_end.txt  23_next_statement.txt  32_split_function.txt  33_user_functions.txt  40_associative_array.txt  43_asort.txt  50_csv_processing.txt  51_log_analysis.txt  52_word_count.txt
integration_tests/input/: csv_data.txt  employees.txt  log.txt
integration_tests/scripts/: 01_print_all.awk  02_field_access.awk  03_printf_formats.awk  04_begin_end.awk  05_row_sum.awk  10_regex_match.awk  11_negated_regex.awk  12_range_pattern.awk  13_field_regex.awk  14_expression_pattern.awk  20_if_else.awk  21_while_loop.awk  22_for_loop.awk  23_next_statement.awk  24_switch.awk  30_string_functions.awk  31_math_functions.awk  31b_math_functions_compat.awk  32_split_function.awk  33_user_functions.awk  34_sprintf.awk  40_associative_array.awk  41_delete_array.awk  42_multidim_array.awk  43_asort.awk  50_csv_processing.awk  51_log_analysis.awk  52_word_count.awk  53_namespace.awk  54_gensub.awk  55_coprocess.awk  56_i18n.awk
packaging/: README.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/conan/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
packaging/homebrew/: awk.rb
packaging/linux/: awk.spec
packaging/linux/debian/: changelog  control  copyright  rules
packaging/vcpkg/: portfile.cmake  usage  vcpkg.json
packaging/windows/: build_installer.bat  installer.nsi
scripts/: build_all.bat  build_all.sh  create_release.sh  run_integration_tests.py
src/: environment.cpp  i18n.cpp  interpreter.cpp  interpreter_builtins_io.cpp  interpreter_builtins_math.cpp  interpreter_builtins_misc.cpp  interpreter_builtins_string.cpp  interpreter_coprocess.cpp  interpreter_eval.cpp  interpreter_exec.cpp  interpreter_getline.cpp  lexer.cpp  main.cpp  parser.cpp  regex_cache.cpp  space_invaders.cpp  space_invaders.hpp  value.cpp
tests/: create_test_mo.py  i18n_test.cpp  interpreter_test.cpp  lexer_test.cpp  main.cpp  parser_test.cpp  parser_test_minimal.cpp  test_framework.hpp
